--- a/mean/package.json
+++ b/mean/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "concurrently \"yarn start:back\" \"yarn start:front\"",
     "start:front": "ng serve",
-    "start:back": "nodemon server",
+    "start:back": "nodemon -r dotenv/config server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -25,7 +25,9 @@
     "@angular/router": "~11.2.4",
     "body-parser": "^1.19.0",
     "concurrently": "^6.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.12.3",
     "nodemon": "^2.0.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
